Fixed themed text in index, border color in algolistitteme

--- a/app.json
+++ b/app.json
@@ -14,9 +14,15 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#c6d9f1"
       },
-      "package": "com.anonymous.algobeiderbasel"
+      "package": "com.anonymous.algobeiderbasel",
+      "permissions": [
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.DOWNLOAD_WITHOUT_NOTIFICATION",
+        "android.permission.ACCESS_NETWORK_STATE"
+      ]
     },
     "web": {
       "bundler": "metro",
@@ -39,6 +45,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "7a092c48-55a3-4212-82e8-60a99c1891cb"
+      }
     }
   }
 }
