--- a/app.json
+++ b/app.json
@@ -2,14 +2,15 @@
   "expo": {
     "name": "Algorithmen beider Basel",
     "slug": "algo-beider-basel",
-    "version": "0.9.0",
+    "version": "0.9.2",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.algobeiderbasel"
     },
     "android": {
       "adaptiveIcon": {
