--- a/package.json
+++ b/package.json
@@ -21,31 +21,33 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
-    "expo": "~52.0.4",
+    "expo": "^52.0.38",
     "expo-asset": "~11.0.1",
-    "expo-blur": "~14.0.1",
+    "expo-blur": "~14.0.3",
+    "expo-build-properties": "~0.13.2",
     "expo-constants": "~17.0.2",
-    "expo-dev-client": "~5.0.1",
+    "expo-dev-client": "~5.0.13",
     "expo-font": "~13.0.1",
-    "expo-haptics": "~14.0.0",
-    "expo-linking": "~7.0.2",
-    "expo-router": "~4.0.3",
-    "expo-splash-screen": "~0.29.7",
-    "expo-status-bar": "~2.0.0",
-    "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.2",
-    "expo-web-browser": "~14.0.0",
+    "expo-haptics": "~14.0.1",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.18",
+    "expo-splash-screen": "~0.29.22",
+    "expo-status-bar": "~2.0.1",
+    "expo-symbols": "~0.2.2",
+    "expo-system-ui": "~4.0.8",
+    "expo-updates": "~0.27.3",
+    "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.1",
+    "react-native": "0.76.7",
     "react-native-blob-util": "^0.19.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-pdf": "^6.7.7",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.0.0",
+    "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.2"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -53,7 +55,7 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.0",
+    "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
