--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "algo-beider-basel",
   "main": "expo-router/entry",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -21,25 +21,25 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
-    "expo": "^52.0.38",
+    "expo": "~52.0.47",
     "expo-asset": "~11.0.1",
     "expo-blur": "~14.0.3",
-    "expo-build-properties": "~0.13.2",
+    "expo-build-properties": "~0.13.3",
     "expo-constants": "~17.0.2",
-    "expo-dev-client": "~5.0.13",
+    "expo-dev-client": "~5.0.20",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.18",
-    "expo-splash-screen": "~0.29.22",
+    "expo-router": "~4.0.21",
+    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.8",
-    "expo-updates": "~0.27.3",
+    "expo-system-ui": "~4.0.9",
+    "expo-updates": "~0.27.4",
     "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
     "react-native-blob-util": "^0.19.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-pdf": "^6.7.7",
