--- a/eas.json
+++ b/eas.json
@@ -20,6 +20,14 @@
       "android": {
         "buildType": "apk"
       }
+    },
+    "development-simulator": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "ios": {
+        "simulator": true
+      },
+      "environment": "development"
     }
   },
   "submit": {
